--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,9 +38,16 @@ android {
 }
 
 dependencies {
+
+    //glide
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'org.jsoup:jsoup:1.14.3'
+
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 
     //coroutine
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
