--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,11 @@ android {
 
 
     buildTypes {
+        debug {
+            manifestPlaceholders.put("label", "@string/app_name_debug")
+        }
         release {
+            manifestPlaceholders.put("label", "@string/app_name_release")
             signingConfig signingConfigs.releaseWithSignedKey
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
