--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ina"
-        android:label="@string/app_name"
+        android:label="${label}"
         android:roundIcon="@mipmap/ina_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.HoloStation">
